# shell_python

./: README.md  pyproject.toml
src/: core.py  main.py
src/commands/: base.py  cat.py  cd.py  cp.py  exit.py  ls.py  mv.py  pwd.py  rm.py
src/utils/: console_info.py  error_decorator.py  format_output.py  logger.py  parser.py
tests/: test_cat_command.py  test_cd_command.py  test_core.py  test_cp_command.py  test_ls_command.py  test_mv_command.py  test_rm_command.py
