[project]
name = "console-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing",
    "-q",
]

pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = ["*/__init__.py", "exit.py", "pwd.py", "*/utils/*", "base.py", "main.py"]

[tool.coverage.report]
show_missing = true
fail_inder = 80